--- a/less/_defaults/_colors.less
+++ b/less/_defaults/_colors.less
@@ -6,6 +6,12 @@
 @grey: #9096A0;
 @greyDark: #4D4D4D;
 
+// Added for extensions/components compatibility
+
+@primary-color: @red;
+@blue: @red;
+@primary-color-inverted: #FFFFFF;
+
 // These variables are used to change the colour of text
 // Primary use is for altering the text colour over a background image
 // See ../project/theme-extras.less for block mixin
