--- a/less/plugins/adapt-contrib-pageLevelProgress/pageLevelProgressIndicator.less
+++ b/less/plugins/adapt-contrib-pageLevelProgress/pageLevelProgressIndicator.less
@@ -26,6 +26,7 @@
 .pagelevelprogress {
   &__indicator {
     border-color: @progress-border;
+    border-radius: 0;
   }
 
   &__indicator-inner {
@@ -45,6 +46,7 @@
   .pagelevelprogress__indicator {
     border-color: @menu-item-progress-border;
     width:100%;
+    border-radius: 0;
   }
 
   .pagelevelprogress__indicator-inner {
@@ -61,6 +63,7 @@
 .pagelevelprogress__nav-btn {
   .pagelevelprogress__indicator {
     border-color: @nav-progress-border;
+    border-radius: 0;
   }
 
   .pagelevelprogress__indicator-inner {
