--- a/less/core/page.less
+++ b/less/core/page.less
@@ -15,7 +15,7 @@
   }
 
   &__header{
-    background-color: #595959;
+    background-color: @redDarker;
     color: white;
     text-align: center;
   }
