--- a/less/core/nav.less
+++ b/less/core/nav.less
@@ -17,6 +17,10 @@
     }
   }
 
+    &__home-btn .icon {
+    .icon-home;
+    }
+  
   &__pagelevelprogress-btn{
     background-color: #fff;
     border: none;
